# ledmon

./: .checkpatch.conf  .gitignore  .style.yapf  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.am  README  README.md  configure.ac  ledmon.pc.in  meson.build  meson_options.txt  pytest.ini
.github/: .checkpatch.conf  build_configure.sh  configure_apt.sh  install_debs_compilation.sh  nitpicks.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature-change-request.yaml  question.yaml
.github/misc/suite-helpers/: security-experimental-selectors-custom.yml
.github/workflows/: changelog.yml  checkpatch.yml  codeql.yml  nitpicker.yaml  review.yml  test.yml  yapf_check.yaml
LICENSES/: LICENSE.GPL-3.0-or-later
config/: config.h
doc/: Makefile  Makefile.am  ledctl.conf.pod  ledctl.pod  ledmon.conf.pod  ledmon.pod  meson.build
m4/: m4_check_if_prog_installed.m4
snap/: snapcraft.yaml
snap/hooks/: install  remove
src/: Makefile  Makefile.am  ahci.c  ahci.h  amd.c  amd.h  amd_ipmi.c  amd_ipmi.h  amd_sgpio.c  amd_sgpio.h  block.c  block.h  cntrl.c  cntrl.h  config.h  config_file.c  config_file.h  dellssd.c  dellssd.h  enclosure.c  enclosure.h  ibpi.h  ibpi_logging.h  ipmi.c  ipmi.h  ledctl.c  ledmon.c  ledmon_conf_test.c  libled_internal.c  libled_internal.h  list.c  list.h  logfile.txt  meson.build  npem.c  npem.h  pci_slot.c  pci_slot.h  pidfile.c  pidfile.h  (+23 more)
src/common/: Makefile.am  config_file.c  config_file.h
src/ledctl/: Makefile.am  help.c  help.h  ledctl.c
src/ledmon/: Makefile.am  ledmon.c  pidfile.c  pidfile.h  udev.c  udev.h
src/lib/: LIBRARY.md  Makefile.am  ahci.c  ahci.h  amd.c  amd.h  amd_ipmi.c  amd_ipmi.h  amd_nvme_slot.c  amd_nvme_slot.h  amd_sgpio.c  amd_sgpio.h  block.c  block.h  cntrl.c  cntrl.h  dellssd.c  dellssd.h  enclosure.c  enclosure.h  ipmi.c  ipmi.h  libled.c  libled_internal.c  libled_internal.h  libled_private.h  list.c  list.h  member.c  member.h  npem.c  npem.h  pci_slot.c  pci_slot.h  raid.c  raid.h  scsi.c  scsi.h  ses.c  ses.h  (+14 more)
src/lib/include/: Makefile.am
src/lib/include/led/: Makefile.am  libled.h
systemd/: Makefile  Makefile.am  ledmon.service  ledmon.service.in
test/: exercise_ledctl.py
tests/: Makefile.am  README.md  check_symbol_visibility.sh  conftest.py  export_build_flags.sh  install_ubuntu_packages.sh  lib_unit_test.c  licensing.py  meson.build  parameters_test.py  runtests.sh  slot_test.py  valid_options
tests/expected/: empty_file  invalid_options  valid_options
tests/inputs/: invalid_options  valid_options
tests/ledctl/: ledctl_cmd.py  parameters_test.py  slot_test.py
